# coinbase-pro

./: .flake8  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: codeql-analysis.yml
coinbase_pro/: __init__.py  abstract.py  client.py  messenger.py  socket.py
docs/: 01-Quickstart.md  02-Abstract.md  03-Messenger.md  04-Client.md  05-Socket.md  06-Tests.md  07-Development.md  08-Examples.md  Abstract.md  Client.md  Messenger.md  Quickstart.md  README.md  Socket.md  Tests.md
tests/: conftest.py  settings.json.example  teardown.py  test_api.py  test_auth.py  test_messenger.py  test_private.py  test_public.py  test_socket.py
