[tool.poetry]
name = "coinbase-pro"
version = "2.4.1"
description = "Another Unofficial Python Wrapper for Coinbase Pro"
authors = ["teleprint-me"]
license = "AGPL"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
websocket-client = "^1.2.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
dateutils = "^0.6.12"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
