[metadata]
name = coinbase-pro
version = 2.2.1
url = https://github.com/teleprint-me/coinbase-pro
download_url = https://github.com/teleprint-me/w3rw/releases/download/2.2.1/coinbase-pro-2.2.1.tar.gz
project_urls =
    Bug Tracker = https://github.com/teleprint-me/coinbase-pro/issues
    Discussions = https://github.com/teleprint-me/coinbase-pro/discussions
    Documentation = https://github.com/teleprint-me/coinbase-pro/tree/main/docs
author = teleprint.me
author_email = noreply@teleprint.me
license = AGPL
description = Python Web3 Requests Wrapper
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
install_requires =
    requests
    websocket-client
tests_require = 
    pytest
    requests
    websocket-client
    dateutils
keywords =
    requests
    wrapper
    rest
    api
    trading
    client
    crypto
    currency
    coinbase
    pro
    exchange
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Financial and Insurance Industry
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: AGPL License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .

[bdist_wheel]
universal=1
