[metadata]
name = coinbase-pro
version = 2.3.0
url = https://github.com/teleprint-me/coinbase-pro
download_url = https://github.com/teleprint-me/w3rw/releases/download/2.3.0/coinbase-pro-2.3.0.tar.gz
project_urls =
    Bug Tracker = https://github.com/teleprint-me/coinbase-pro/issues
    Discussions = https://github.com/teleprint-me/coinbase-pro/discussions
    Documentation = https://github.com/teleprint-me/coinbase-pro/tree/main/docs
author = teleprint.me
author_email = noreply@teleprint.me
license = AGPL
description = Python Web3 Requests Wrapper
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
install_requires =
    requests==2.27.1
    websocket-client==1.2.3
tests_require = 
    dateutils==0.6.12
    pytest==6.2.5
    requests==2.27.1
    websocket-client==1.2.3
keywords =
    requests
    wrapper
    rest
    api
    trading
    client
    crypto
    currency
    coinbase
    pro
    exchange
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Financial and Insurance Industry
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: AGPL License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .

[bdist_wheel]
universal=1
